--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,8 +22,8 @@ jobs:
     - name: Install Rust
       uses: dtolnay/rust-toolchain@stable
       
-    - name: Cache dependencies
-      uses: Swatinem/rust-cache@v3
+    - name: Rust Cache
+      uses: Swatinem/rust-cache@v2.7.8
       with:
         cache-on-failure: true
     
