--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,8 +33,8 @@ jobs:
     - name: Run tests
       run: cargo test --verbose
       
-    - name: Upload artifact
-      uses: actions/upload-artifact@v3
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v4.6.1
       with:
         name: ${{ env.BINARY_NAME }}-linux
         path: target/release/${{ env.BINARY_NAME }}
@@ -49,8 +49,8 @@ jobs:
       with:
         fetch-depth: 0
         
-    - name: Download artifact
-      uses: actions/download-artifact@v3
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v4.6.1
       with:
         name: ${{ env.BINARY_NAME }}-linux
         path: ./artifacts
