--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -98,8 +98,8 @@ jobs:
         echo "- Configuration management with TOML" >> $GITHUB_ENV
         echo "EOF" >> $GITHUB_ENV
         
-    - name: Create Release
-      uses: softprops/action-gh-release@v1
+    - name: GH Release
+      uses: softprops/action-gh-release@v2.2.1
       with:
         name: Release ${{ steps.release_notes.outputs.version }}
         tag_name: ${{ startsWith(github.ref, 'refs/tags/') && github.ref_name || format('dev-{0}', github.sha) }}
