--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -113,4 +113,4 @@ jobs:
         prerelease: ${{ github.ref == 'refs/heads/master' }}
         files: ./artifacts/${{ env.BINARY_NAME }}
         generate_release_notes: false
-        token: ${{ github.token }}
+        GH_TOKEN: ${{secrets.GITHUB_TOKEN }}
